--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
-    "react-iframe": "^1.8.5"
+    "react-iframe": "^1.8.5",
+    "sharp": "^0.32.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
