--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "crypto": "^1.0.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
@@ -18,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-iframe": "^1.8.5",
+    "react-spinners": "^0.13.8",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
