--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "axios": "^1.4.0",
     "crypto": "^1.0.1",
+    "emailjs": "^4.0.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "next": "13.2.3",
@@ -20,6 +22,7 @@
     "react-icons": "^4.8.0",
     "react-iframe": "^1.8.5",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
