--- a/package.json
+++ b/package.json
@@ -10,19 +10,28 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/mdx": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
     "axios": "^1.4.0",
     "crypto": "^1.0.1",
     "emailjs": "^4.0.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "gray-matter": "^4.0.3",
     "next": "13.2.3",
+    "next-mdx-remote": "^4.4.1",
     "octokit": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-iframe": "^1.8.5",
+    "react-markdown": "^8.0.7",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "remark": "^14.0.3",
+    "remark-gfm": "^3.0.1",
+    "remark-mdx": "^2.3.0",
     "sharp": "^0.32.1"
   },
   "devDependencies": {
