--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-iframe": "^1.8.5",
     "react-markdown": "^8.0.7",
     "react-spinners": "^0.13.8",
+    "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.3",
     "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
