--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^4.8.0",
     "react-iframe": "^1.8.5",
     "react-markdown": "^8.0.7",
+    "react-share": "^4.4.1",
     "react-spinners": "^0.13.8",
     "react-syntax-highlighter": "^15.5.0",
     "react-toastify": "^9.1.3",
