--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "emailjs": "^4.0.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "framer-motion": "^11.11.11",
     "gray-matter": "^4.0.3",
     "next": "13.2.3",
     "next-mdx-remote": "^4.4.1",
