--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-iframe": "^1.8.5",
+    "react-intersection-observer": "^9.13.1",
     "react-markdown": "^8.0.7",
     "react-share": "^4.4.1",
     "react-spinners": "^0.13.8",
