--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint-config-next": "13.2.3",
     "framer-motion": "^11.11.11",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.454.0",
     "next": "13.2.3",
     "next-mdx-remote": "^4.4.1",
     "octokit": "^2.1.0",
