--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@mdx-js/mdx": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "axios": "^1.4.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "crypto": "^1.0.1",
     "emailjs": "^4.0.2",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
-    "framer-motion": "^11.11.11",
+    "framer-motion": "^11.11.17",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.454.0",
     "next": "13.2.3",
@@ -26,7 +28,7 @@
     "octokit": "^2.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.12.0",
     "react-iframe": "^1.8.5",
     "react-intersection-observer": "^9.13.1",
     "react-markdown": "^8.0.7",
@@ -37,7 +39,9 @@
     "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
     "remark-mdx": "^2.3.0",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
