--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.25",
     "crypto": "^1.0.1",
     "emailjs": "^4.0.2",
     "eslint": "8.35.0",
